Scroll to Top jQuery Works

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Nav HTML -->
     <header class="nav">
         <div class="logo">
-            <img src="images/Personal Logo.png">
+            <img src="../UX_UI_HW_19/images/Personal Logo.png">
         </div>
         <div id="hamburger">
             <a class="bootuns" href="#">About</a>
@@ -40,7 +40,7 @@
         <div class="border">
             <section class="heroImg">
                 <div class="content">
-                    <img src="../UX_UI_HW_18/images/Image.png">
+                    <img src="../UX_UI_HW_19/images/Image.png">
                     <h1 class="title">Hello And Welcome!
                     </h1>
                     <p>I am Sydney Hembree, a Junior UX Designer with a flair for user research
@@ -54,25 +54,25 @@
                 <hr class="savingThrow">
                 <div class="smallerImages">
                     <figure class="userFlow">
-                        <img src="../UX_UI_HW_18/images/User Flow.png" alt="COVID Crushers User Flow" width="764"
+                        <img src="../UX_UI_HW_19/images/User Flow.png" alt="COVID Crushers User Flow" width="764"
                             height="620">
                         <figcaption class="caption">Allow GPS or Not in COVID-19
                             Notification Mobile App?</figcaption>
                     </figure>
                     <figure class="DOEGroup">
-                        <img src="../UX_UI_HW_18/images/DOE Group.png" alt="Department of Energy Group" width="766"
+                        <img src="../UX_UI_HW_19/images/DOE Group.png" alt="Department of Energy Group" width="766"
                             height="638">
                         <figcaption class="caption">Working Together to Find Solutions
                             for an Agency Redesign</figcaption>
                     </figure>
                     <figure class="siteMap">
-                        <img src="../UX_UI_HW_18/images/Site Map.png" alt="Department of Energy Site Map" width="764"
+                        <img src="../UX_UI_HW_19/images/Site Map.png" alt="Department of Energy Site Map" width="764"
                             height="624">
                         <figcaption class="caption">Card Sorting and Site Mapping
                             for the Department of Energy</figcaption>
                     </figure>
                     <figure class="styleGuide">
-                        <img src="../UX_UI_HW_18/images/L5P Style Guide.png" alt="Nonprofit Style Guide" width="782"
+                        <img src="../UX_UI_HW_19/images/L5P Style Guide.png" alt="Nonprofit Style Guide" width="782"
                             height="636">
                         <figcaption class="caption">Deciding on Hover and Active
                             Components for a RWD Site</figcaption>
@@ -173,7 +173,7 @@
             </p>
             <div class="covidCase">
                 <div>
-                    <img src="images/Covid Crushers.png">
+                    <img src="../UX_UI_HW_19/images/Covid Crushers.png">
                     <h2>COVID Crushers Mobile Notification App</h2>
                     <p>In February of 2021, our team realized the State of
                         Georgia did not have a single platform for Georgians
@@ -184,7 +184,7 @@
             </div>
             <div class="doeCase">
                 <div>
-                    <img src="images/DOE.png">
+                    <img src="../UX_UI_HW_19/images/DOE.png">
                     <h2>Department of Energy RWD Redesign</h2>
                     <p>While the Department of Energy has made amazing changes
                         to its main site, the agency has ignored the searchability
@@ -195,7 +195,7 @@
             </div>
             <div class="lfpCase">
                 <div>
-                    <img src="images/L5PCAC.png">
+                    <img src="../UX_UI_HW_19/images/L5PCAC.png">
                     <h2>Little Five Points Center RWD Redesign</h2>
                     <p>The Little Five Points Center for Arts & Community is reaching
                         people through Facebook since its website became inaccessible.
@@ -206,7 +206,7 @@
             </div>
             <div class="codingCase">
                 <div>
-                    <img src="images/Coding.png">
+                    <img src="../UX_UI_HW_19/images/Coding.png">
                     <h2>Coding Project for Bootcamp</h2>
                     <p>This section will be filled out when this project is complete.
                     </p>
@@ -215,11 +215,14 @@
             </div>
         </div>
     </section>
+    <!-- Scrolling Feature HTML -->    
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Go to Top</button>
+
     <!-- Footer HTML -->
     <div class="footer">
         <div class="wrapper">
             <div>
-                <img class="logo2" src="images/Personal Logo.png">
+                <img class="logo2" src="../UX_UI_HW_19/images/Personal Logo.png">
             </div>
             <div class="textLinks">
                 <i class="fas fa-envelope"></i>
@@ -233,13 +236,13 @@
                 </a>
             </div>
             <div>
-                <img class="socialMedia GitHub" src="images/Github Logo.png">
+                <img class="socialMedia GitHub" src="../UX_UI_HW_19/images/Github Logo.png">
             </div>
             <div>
-                <img class="socialMedia LinkedIn" src="images/LinkedIn Logo.png">
+                <img class="socialMedia LinkedIn" src="../UX_UI_HW_19/images/LinkedIn Logo.png">
             </div>
             <div>
-                <img class="socialMedia FaceBook" src="images/Facebook Logo.png">
+                <img class="socialMedia FaceBook" src="../UX_UI_HW_19/images/Facebook Logo.png">
             </div>
             <div>
                 <h1 class="footerTitle"> Let's chat!</h1>
