Updating the Nav Bar

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <img src="../UX_UI_HW_19/images/Personal Logo.png">
         </div>
         <div id="hamburger">
+            <a class="bootuns" href="#">Work</a>
+            <a class="bootuns" href="#">Play</a>
             <a class="bootuns" href="#">About</a>
-            <a class="bootuns" href="#">Skills</a>
-            <a class="bootuns" href="#">Case Studies</a>
-            <a class="bootuns" href="#">Resume</a>
+            <a class="bootuns1" href="#">Resume</a>
         </div>
         <nav>
             <div class="navbar" id="navbar">
