Updating CSS for Nav & Footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="bootuns" href="#">Work</a>
             <a class="bootuns" href="#">Play</a>
             <a class="bootuns" href="#">About</a>
-            <a class="bootuns1" href="#">Resume</a>
+            <a class= "bootuns1" href="../UX_UI_HW_19/images/Resume2021.pdf" download="images/Resume2021.pdf">Resume</a>
         </div>
         <nav>
             <div class="navbar" id="navbar">
