Updating the Footer

--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
                 </a>
             </div>
             <div>
-                <img class="socialMedia GitHub" src="../UX_UI_HW_19/images/Github Logo.png">
+                <img class="socialMedia GitHub" src="../UX_UI_HW_19/images/githubIcon.png">
             </div>
             <div>
-                <img class="socialMedia LinkedIn" src="../UX_UI_HW_19/images/LinkedIn Logo.png">
+                <img class="socialMedia LinkedIn" src="../UX_UI_HW_19/images/linkedinIcon.png">
             </div>
             <div>
-                <img class="socialMedia FaceBook" src="../UX_UI_HW_19/images/Facebook Logo.png">
+                <img class="socialMedia FaceBook" src="../UX_UI_HW_19/images/facebookIcon.png">
             </div>
             <div>
                 <h1 class="footerTitle"> Let's chat!</h1>
