Updating CSS for footer and colors

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- UX, UI, Coding Skills HTML -->
     <section class="skills">
         <div class="wrapper1">
-            <h1 class="title">Skillset
+            <h1 class="title2">Skillset
             </h1>
             <p>Combining content into sketches and Lo-Fi wireframes
                 really brings out the design’s potential while working
@@ -163,7 +163,7 @@
     <!-- Case Studies HTML -->
     <section class="caseStudies">
         <div class="takeovertheworld">
-            <h1 class="title">Case Studies
+            <h1 class="title3">Case Studies
             </h1>
             <p>Using Agile techniques and design methodologies,
                 our teams took on academic and real-world UX
@@ -182,6 +182,7 @@
                     <h3>UX Research Project</h3>
                 </div>
             </div>
+            <br>
             <div class="doeCase">
                 <div>
                     <img src="../UX_UI_HW_19/images/DOE.png">
@@ -193,6 +194,7 @@
                     <h3>UX/UI Design Project</h3>
                 </div>
             </div>
+            <br>
             <div class="lfpCase">
                 <div>
                     <img src="../UX_UI_HW_19/images/L5PCAC.png">
@@ -204,6 +206,7 @@
                     <h3>UX/UI Design Project Client: L5PCAC</h3>
                 </div>
             </div>
+            <br>
             <div class="codingCase">
                 <div>
                     <img src="../UX_UI_HW_19/images/Coding.png">
