Added link to hwmk 20 under "work"

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="../UX_UI_HW_19/images/Personal Logo.png">
         </div>
         <div id="hamburger">
-            <a class="bootuns" href="#">Work</a>
+            <a class="bootuns" href="https://srhembree.github.io/UX_UI_HW_20/">Work</a>
             <a class="bootuns" href="#">Play</a>
             <a class="bootuns" href="#">About</a>
             <a class= "bootuns1" href="../UX_UI_HW_19/images/Resume2021.pdf" download="images/Resume2021.pdf">Resume</a>
@@ -208,7 +208,7 @@
             <br>
             <div class="lfpCase">
                 <div>
-                    <img src="../UX_UI_HW_19/images/L5PCAC.png">
+                    <img src="../UX_UI_HW_19/images/L5PCAC.png" href="https://srhembree.github.io/UX_UI_HW_20/">
                     <h2>Little Five Points Center RWD Redesign</h2>
                     <p>The Little Five Points Center for Arts & Community is reaching
                         people through Facebook since its website became inaccessible.
