--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
             <br>
             <div class="lfpCase">
                 <div>
-                    <img src="../UX_UI_HW_19/images/L5PCAC.png" href="https://srhembree.github.io/UX_UI_HW_20/">
+                    <a href="https://srhembree.github.io/UX_UI_HW_20/">
+                    <img src="../UX_UI_HW_19/images/L5PCAC.png">
+                    </a>
                     <h2>Little Five Points Center RWD Redesign</h2>
                     <p>The Little Five Points Center for Arts & Community is reaching
                         people through Facebook since its website became inaccessible.
